--- a/en/Functions.ipynb
+++ b/en/Functions.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "## So what is a function anyway?\n",
     "\n",
+    "\n",
+    "\n",
     "Since we are about to learn functional programming, we need to agree in what a _function_ is in this context. Let us start with a set of entities, for example, the cars parked in a given block of a street. One can identify each car by its license plate, and then build a table with two columns: the first one with the license plate, and the second one with the corresponding the color of each car:\n",
     "\n",
     "| Lic. Plate | Color         | \n",
@@ -30,15 +32,15 @@
     "f(x) = x + 1, \n",
     "$$\n",
     "\n",
-    "that is, the function that returns the value $x$ plus one. The input set (which is called the _domain_ of the function in math) is the set of all real values, $\\mathbb{R}$, while the output set (the _codomain_ in math) is also $\\mathbb{R}$. Using the _arrow_ notation, the complete definition of the function would be\n",
+    "that is, the function that returns the value $x$ plus one. The input set (which is called the _domain_ of the function in math) is the set of all real values, $\\mathbb{R}$, while the output set (the _codomain_ in math) is also $\\mathbb{R}$, because adding one to any real number is also another real number. Using the _arrow_ notation, the complete definition of the function would be\n",
     "\n",
     "$$\n",
-    "f: \\mathbb{R} \\rightarrow \\mathbb{R} \\; ; \\;  x \\mapsto x + 1 \n",
+    "f: \\mathbb{R} \\rightarrow \\mathbb{R} \\; ; \\;  x \\mapsto x + 1,\n",
     "$$\n",
     "\n",
-    "Or in english, $f$ is a function from $\\mathbb{R}$ to $\\mathbb{R}$ such that $f$ of $x$ is $x + 1$.\n",
+    "that can be read as following: $f$ is a function from $\\mathbb{R}$ to $\\mathbb{R}$ such that $f$ of $x$ is $x + 1$\".\n",
     "\n",
-    "> 🔔 A slight detour around the codomain. The codomain is the set of entities where the function can possibly map input values. For example, in the case of the color of the cars, the codomain is simply all the possible colors. In many cases that information is too general, and it is convenient to define the _range_ of the function, which is the set of actual values of outputs the function maps inputs into. The _range_ in the cars example is the set {black, red, white}.\n",
+    "> 🔔 A slight detour around the codomain. The codomain is the set of entities where the function can possibly map input values into. For example, in the case of the color of the cars, the codomain is simply the set of all the possible colors. In many cases that information is too general, and it is convenient to define the _range_ of the function, which is the set of actual values of outputs the function maps inputs into. The range in the cars example is the set {black, red, white}.\n",
     "\n",
     "### Multiple inputs and outputs\n",
     "\n",
@@ -46,7 +48,7 @@
     "The inputs of our `vendingMachine` function are the money, the letter and the number you selected, and the outputs are the product and \n",
     "the cashback (if any). \n",
     "\n",
-    "An example from math could be a translation function, where given a point with coordinates \\(x\\) and $$y$$ in the plane, it returns a point with coordinates $$x+1$$ and $$y+1$$:\n",
+    "An example from math could be a translation function, where given a point with coordinates \\(x\\) and $y$ in the plane, it returns a point with coordinates $x+1$ and $y+1$:\n",
     "\n",
     "$$\n",
     "g: \\mathbb{R} \\times \\mathbb{R} \\rightarrow \\mathbb{R} \\times \\mathbb{R}  \\; ; \\;  (x,y) \\mapsto (x + 1, y+1)\n",
@@ -59,7 +61,8 @@
     "$$\n",
     "\n",
     "### Partial application \n",
-    "When we feed a function of several input elements, we can obtain the proper output(s) items. But having many inputs opens a new possibility: what happens when one decides not to complete all the inputs? Let us find out. Let us assume that we entered a bill into the vending machine. It is clear that we will not get any product, because the machine still needs two more inputs: the letter of the shelf and the product number that we want. _After_ we complete these two inputs, we will get our treat (and cashback, if any). So, entering money only in the vending machine leads to a state where two inputs are needed and two outputs will be returned. But, this is _another function_!!!. Let us call it `vendingMachineAfterInsertBill` that receives the letter of the shelf and the product number that we want and returns the product (and cashback, if any). \n",
+    "When we feed a function of several input elements, we can obtain the proper output(s). But having many inputs opens a new possibility: what happens when one decides not to complete all the inputs? Let us find out. Let us assume that we entered a bill into the vending machine. It is clear that we will not get any product, because the machine still needs two more inputs: the letter of the shelf and the product number that we want. _After_ we complete these two inputs, we will get our treat (and cashback, if any). So, entering money only in the vending machine leads to a state where two inputs are needed and two outputs will be returned. But, this is _another function_!!!. Let us call it `vendingMachineAfterInsertBill` that receives the letter of the shelf and the product number that we want and returns the product (and cashback, if any). \n",
+    "\n",
     "Going back to the math example, let us feed the function with just the $x = 3$ value, \n",
     "\n",
     "$$\n",
@@ -89,7 +92,7 @@
     "This plumbing where the output of one function is the input of another is called _composition_. Note that it is absolutely necessary that the output of the first called function (`getFirstName`) and the input of the second one (`getInitial`) are the same kind of entity, in our case, both are first names.\n",
     "You can [see this pictures for a graphical explanation](https://mathinsight.org/function_machine_composition).\n",
     "\n",
-    "Let us now look at a math example. We defined before the function $$f(x)$$ that adds one to $$x$$, for example \n",
+    "Let us now look at a math example. We defined before the function $f(x)$ that adds one to $x$, for example \n",
     "\n",
     "$$\n",
     "f(0) = 0 + 1 = 1\n",
@@ -158,7 +161,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [
@@ -197,7 +200,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [
@@ -277,7 +280,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [
@@ -300,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Yes, you can use the `'` symbol in a function name! Note also that we defined a _function_ `add2` by using the composition operator (no argument needed). This is equivalent to:"
+    "Yes, you can use the `'` symbol in any identifier! (provided it is not the first character). Note also that we defined a _function_ `add2` by using the composition operator (no argument needed). This is equivalent to:"
    ]
   },
   {
@@ -311,7 +314,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [],
@@ -366,7 +369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ❓ Think about routines, procedures or functions that maybe you have written in your language of preference. Do they behave as F\\# functions? "
+    "> ❓ Think about routines, procedures or functions that maybe you have written in your language of preference. Do they behave as F\\# functions? What are the main differences you see?"
    ]
   },
   {
@@ -391,6 +394,14 @@
    "source": [
     "Some final remarks for now on functions. First, note that the language use the same keyword `let` to bind simple values and functions to a name or identifier. This emphasizes the fact that in F# functions are 'just' values, and can be treated in the same way as, say, a simpler binding of an expression to an identifier. \n",
     "Second, the properties of functions that were discussed above match perfectly inmutability. In fact, functions receive immutable inputs and return an immutable value. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Checkout [the Jupyter notebook companion of this guide](https://github.com/fcolavecchia/fp-course/blob/main/en/Functions.ipynb).\n"
    ]
   }
  ],
